--- a/scss/sections/_examples.scss
+++ b/scss/sections/_examples.scss
@@ -1,6 +1,11 @@
 .coding {
     &__section {
         text-align: center;
+        background-image: url(../img/supernova.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
     }
 
     &__header {
@@ -14,5 +19,8 @@
 
     &__title {
         color: $aqua;
+        border-radius: em(3px);
+        background-color: rgba($color: $black, $alpha: 0.5);
+        padding: em(5px);
     }
 }
