--- a/scss/sections/_scs.scss
+++ b/scss/sections/_scs.scss
@@ -1,6 +1,11 @@
 .scs {
     &__section {
         text-align: center;
+        background-image: url(../img/singularity.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
     }
 
     &__header {
@@ -14,6 +19,7 @@
 
     &__title {
         color: $aqua;
+        border-radius: em(3px);
         background-color: rgba($color: $black, $alpha: 0.5);
         padding: em(5px);
     }
@@ -25,6 +31,7 @@
     }
 
     &__item {
+        background-color: rgba($color: $black, $alpha: 0.5);
         border: 1px solid $aqua;
         border-radius: em(5px);
         padding: em(30px);
